--- a/app/views/quizzes/show.html.erb
+++ b/app/views/quizzes/show.html.erb
@@ -12,8 +12,8 @@
 
 <div class="btn-group">
   <%= link_to 'Edit', edit_quiz_path(@quiz), class: "btn btn-default" %>
-  <%= link_to 'Questions', [@quiz, :questions], class: "btn btn-default" %>
-  <%= link_to 'Attempts', [@quiz, :attempts], class: "btn btn-default" %>
+  <%= link_to "Questions: #{@quiz.questions.size}", [@quiz, :questions], class: "btn btn-default" %>
+  <%= link_to "Attempts: #{@quiz.attempts.size}", [@quiz, :attempts], class: "btn btn-default" %>
   <%= link_to 'Moniter', [:moniter, @quiz], class: "btn btn-default"  %>
   <%= link_to 'Clone', [:clone, @quiz], data: { turbo_method: :post, turbo_confirm: "Are you sure?" }, class: "btn btn-default" %>
   <%= link_to "Add New Question", [:new, @quiz, :question], class: "btn btn-default" %>
