--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -22,5 +22,13 @@
     <div class="m-4">
       <%= yield %>
     </div>
+
+    <footer class="m-4 mt-12 text-sm">
+      <div>終身學習 自我增值 提升你我生產力</div>
+
+      <div>Lifelong Learning for Continuous Upgrading to Enhance Productivity</div>
+
+      <div>Copyright © 2022 澳門生產力暨科技轉移中心 - 收集個人資料聲明</div>
+    </footer>
   </body>
 </html>
