--- a/app/views/attempts/index.html.erb
+++ b/app/views/attempts/index.html.erb
@@ -11,6 +11,8 @@
 </div>
 
 
+<%== pagy_nav(@pagy) %>
+
 <% I18n.with_options(scope: 'activerecord.attributes.attempt') do |i18n| %>
   <table>
     <thead>
@@ -38,3 +40,4 @@
   </table>
 <% end %>
 
+<%== pagy_nav(@pagy) %>
