--- a/app/views/quizzes/_form.html.erb
+++ b/app/views/quizzes/_form.html.erb
@@ -2,15 +2,18 @@
   <%= f.error_notification %>
   <%= f.error_notification message: f.object.errors[:base].to_sentence if f.object.errors[:base].present? %>
 
+  <%= f.input :available %>
   <%= f.input :title %>
   <%= f.input :desc %>
   <%= f.input :pre_notice %>
   <%= f.input :calc_type, collection: Quiz::CALC_TYPES.map{|ct| [t(ct, scope: "activerecord.attributes.quiz"), ct]} %>
   <%= f.input :shuffle_questions %>
   <%= f.input :shuffle_options %>
-  <%= f.input :available %>
   <%= f.input :anonymous %>
   <%= f.input :result_viewable %>
+  <%= f.input :on_schedule %>
+  <%= f.input :start_at %>
+  <%= f.input :end_at %>
 
 
   <div class="ingredient__actions">
