--- a/app/views/quizzes/_form.html.erb
+++ b/app/views/quizzes/_form.html.erb
@@ -2,7 +2,7 @@
   <%= f.error_notification %>
   <%= f.error_notification message: f.object.errors[:base].to_sentence if f.object.errors[:base].present? %>
 
-  <%= f.input :available %>
+  <%= f.input :published_at %>
   <%= f.input :title %>
   <%= f.input :desc %>
   <%= f.input :pre_notice %>
