--- a/app/views/attempts/_form.html.erb
+++ b/app/views/attempts/_form.html.erb
@@ -32,7 +32,7 @@
             <label class="my-2 ml-8 hover:cursor-pointer">
               <div class="flex items-center">
                 <% if question.single_answer? %>
-                  <%= aaf.radio_button :selected_options, qo.id.to_s, class: "mr-2" %>
+                  <%= aaf.radio_button :selected_option, qo.id.to_s, class: "mr-2" %>
                 <% else %>
                   <%= aaf.check_box :selected_options, { multiple: true, class: "mr-2" }, qo.id.to_s, nil %>
                 <% end %>
