--- a/app/assets/stylesheets/application.tailwind.css
+++ b/app/assets/stylesheets/application.tailwind.css
@@ -38,3 +38,17 @@ label.boolean {
 label.boolean input.boolean{
   @apply mr-2;
 }
+
+label {
+  @apply block;
+}
+
+.input {
+  @apply mb-2;
+}
+.input.boolean {
+  @apply flex items-center;
+}
+.input.boolean .hint {
+  @apply ml-2;
+}
