--- a/app/views/attempts/_attempt.html.erb
+++ b/app/views/attempts/_attempt.html.erb
@@ -1,9 +1,9 @@
 
 <%= turbo_frame_tag dom_id(attempt) do %>
-  <div>
-    <span><%= link_to attempt, nil, data: { turbo_frame: "_top" } %></span>
-    <span><%= attempt.start_at.strftime("%Y-%m-%d %H:%M:%S") if attempt.start_at %></span>
-    <span><%= attempt.end_at.strftime("%Y-%m-%d %H:%M:%S") if attempt.end_at %></span>
+  <div class="flex">
+    <span class="w-1/6"><%= link_to attempt, nil, data: { turbo_frame: "_top" } %></span>
+    <span class="w-48"><%= attempt.start_at.strftime("%Y-%m-%d %H:%M:%S") if attempt.start_at %></span>
+    <span class="w-48"><%= attempt.end_at.strftime("%Y-%m-%d %H:%M:%S") if attempt.end_at %></span>
     <span><%= attempt.formatted_diff %></span>
     <span><%= attempt.formatted_score %></span>
   </div>
