--- a/app/views/attempts/index.html.erb
+++ b/app/views/attempts/index.html.erb
@@ -6,12 +6,7 @@
 
 <h1>Attempts (<%= @attempts.size %>)</h1>
 
-<div class="btn-group">
-  <%= link_to 'Attempt Quiz', attempt_to_path(@quiz), class: "btn btn-default"  %>
-</div>
-
-
-<%== pagy_nav(@pagy) %>
+<%== pagy_nav(@pagy) if @pagy %>
 
 <% I18n.with_options(scope: 'activerecord.attributes.attempt') do |i18n| %>
   <table>
@@ -40,4 +35,4 @@
   </table>
 <% end %>
 
-<%== pagy_nav(@pagy) %>
+<%== pagy_nav(@pagy) if @pagy %>
