--- a/app/views/attempts/new.html.erb
+++ b/app/views/attempts/new.html.erb
@@ -1,6 +1,7 @@
 <h1><%= @quiz %></h1>
 
 <% unless @quiz.pre_notice.blank? %>
+  <h2><%= t :pre_notice, scope: "activerecord.attributes.quiz" %></h2>
   <div class="my-4 p-4 bg-slate-200">
     <%= simple_format @quiz.pre_notice %>
   </div>
