--- a/app/views/quizzes/index.html.erb
+++ b/app/views/quizzes/index.html.erb
@@ -25,7 +25,7 @@
       <% @quizzes.each do |quiz| %>
         <tr>
           <td class="text-center">
-            <%= tick quiz.published? %>
+            <%= tick quiz.published %>
           </td>
           <td class="text-center">
             <%= tick quiz.anonymous %>
