--- a/app/views/quizzes/show.html.erb
+++ b/app/views/quizzes/show.html.erb
@@ -5,17 +5,9 @@
 <p style="color: green"><%= notice %></p>
 
 <h1>
-  <% if @quiz.published_at %>
-    [<%= @quiz.published_at > Time.now ? "Will Publish" : "Published" %>]
-  <% else %>
-    [Private]
-  <% end %>
+  [<%= @quiz.published ? "Published" : "Private" %>]
   <%= @quiz %>
 </h1>
-
-<div>
-  Publish at: <%= @quiz.published_at %>
-</div>
 
 
 <div class="btn-group">
@@ -99,3 +91,7 @@
 
 
 
+<h3 class="mt-96">Danger Zone</h3>
+<div class="btn-group">
+  <%= button_to 'Delete', @quiz, method: :delete, form: { data: { turbo_confirm: "Are you sure?" }}, class: "btn" %>
+</div>
