--- a/app/views/questions/index.html.erb
+++ b/app/views/questions/index.html.erb
@@ -38,7 +38,8 @@
       </td>
       <td>
         <div class="flex">
-          <%= link_to 'Edit', [:edit, question], class: "btn mr-2" %>
+          <%= link_to 'Show', question, class: "btn mr-1" %>
+          <%= link_to 'Edit', [:edit, question], class: "btn mr-1" %>
           <%= button_to 'Destroy', question, method: :delete, class: "btn", form: {data: {turbo_confirm: 'Are you sure?'}} %>
         </div>
       </td>
