--- a/app/views/attempts/_attempt.html.erb
+++ b/app/views/attempts/_attempt.html.erb
@@ -4,7 +4,7 @@
     <span class="w-1/6"><%= link_to attempt, nil, data: { turbo_frame: "_top" } %></span>
     <span class="w-48"><%= attempt.start_at.strftime("%Y-%m-%d %H:%M:%S") if attempt.start_at %></span>
     <span class="w-48"><%= attempt.end_at.strftime("%Y-%m-%d %H:%M:%S") if attempt.end_at %></span>
-    <span><%= attempt.formatted_diff %></span>
+    <span><%= attempt.formatted_duration %></span>
     <span><%= attempt.formatted_score %></span>
   </div>
 <% end %>
