--- a/app/views/quizzes/index.html.erb
+++ b/app/views/quizzes/index.html.erb
@@ -14,6 +14,7 @@
         <th><%= i18n.t :anonymous %></th>
         <th><%= i18n.t :on_schedule %></th>
         <th><%= i18n.t :question, scope: "activerecord.models" %></th>
+        <th><%= i18n.t :question_bank, scope: "activerecord.models" %></th>
         <th><%= i18n.t :attempt, scope: "activerecord.models" %></th>
         <th><%= i18n.t :title %></th>
         <th>Created By</th>
@@ -32,6 +33,9 @@
           </td>
           <td class="text-center">
             <%= tick quiz.on_schedule %>
+          </td>
+          <td class="text-center">
+            <%= quiz.random_questions ? quiz.random_questions_num : quiz.questions.size %>
           </td>
           <td class="text-center">
             <%= quiz.questions.size %>
